Appending headers of the same name should have their values joined by ','. Now, FetchHeaderList::get() is iterating all header list and append strings to a result joined by ','.

BUG=645497

Review-Url: https://codereview.chromium.org/2587463002
Cr-Commit-Position: refs/heads/master@{#439743}

Former-commit-id: 7ad32cbf574e3d263b64f1888520b9158798d41b